# haskell-hasql.gen

./: .gitignore  CodegenKit.dhall  Config.dhall  Lude.dhall  README.md  Sdk.dhall  demo.dhall  design.mmd  package.dhall  package.test.dhall
.github/: copilot-instructions.md
.github/workflows/: release.yml
Algebras/: package.dhall  package.test.dhall
Algebras/Code/: Env.dhall  Result.dhall  Type.dhall  concat.test.dhall  importing.dhall  importing.test.dhall  package.dhall  package.test.dhall  render.dhall  render.test.dhall  toText.test.dhall
Algebras/Namespace/: order.dhall  order.test.dhall  package.dhall  package.test.dhall  squash.test.dhall  toText.dhall  toText.test.dhall  word.dhall  word.test.dhall
Config/: package.dhall
Files/: Cabal.dhall
Interpreter/: Algebra.dhall  demo.dhall
Interpreter/Modules/: Member.dhall  Primitive.dhall  Project.dhall  Query.dhall  QueryFragments.dhall  Result.dhall  ResultRows.dhall  Scalar.dhall  Value.dhall  package.dhall
Modules/: Statement.dhall  Statements.dhall
Package/: package.dhall
Precompilers/: dimensional.dhall  package.dhall  primitive.dhall  scalar.dhall
Renderer/Files/: StatementModule.dhall  package.dhall
Renderer/Files/StatementModule/: package.dhall
Snippets/: package.dhall  recordDataDecl.dhall  reexportModule.dhall  stringLiteral.dhall
Templates/: RootModule.dhall
demo/: README.md
demo-output/: demo-music-catalogue.cabal
demo-output/src/Demo/: MusicCatalogue.hs
demo-output/src/Demo/MusicCatalogue/: CustomTypes.hs  Prelude.hs  Statements.hs  Types.hs
demo-output/src/Demo/MusicCatalogue/CustomTypes/: AlbumType.hs  TrackMetadata.hs
demo-output/src/Demo/MusicCatalogue/Statements/: CreatePlaylist.hs  GetAlbumsByArtist.hs  GetArtistsWithTrackCount.hs  GetTopTracksByPlayCount.hs  GetTrackDetails.hs  SearchTracksByTitle.hs
demo-output/src/Demo/MusicCatalogue/Types/: AlbumType.hs  TrackMetadata.hs
demo-output/src/MySpace/MusicCatalogue/Statements/: SelectAlbumByFormat.hs  SelectAlbumByName.hs
demo/output/: cabal.project  demo-music-catalogue.cabal
demo/output/Demo/: MusicCatalogue.hs
demo/output/Demo/MusicCatalogue/Algebras/: Scalar.hs
demo/output/src/Demo/MusicCatalogue/Algebra/: Scalar.hs  Statement.hs
demo/output/src/Demo/MusicCatalogue/CustomTypes/: AlbumType.hs  TrackMetadata.hs
demo/output/src/Demo/MusicCatalogue/Statements/: CreatePlaylist.hs  GetAlbumsByArtist.hs  GetArtistsWithTrackCount.hs  GetTopTracksByPlayCount.hs  GetTrackDetails.hs  SearchTracksByTitle.hs
design/: 2.mmd
src/: Config.dhall  ContractVersion.dhall  Sdk.dhall  compile.dhall  demo.dhall  package.dhall
src/Algebras/Code/: concat.dhall  fromText.dhall  fromText.test.dhall  importing.dhall  toText.dhall
src/Algebras/Module/: Type.dhall
src/Algebras/Namespace/: Type.dhall  package.test.dhall  separate.dhall  separate.test.dhall  singleton.dhall  squash.dhall  (+3 more)
src/Files/: Cabal.dhall  package.dhall
src/Interpreter/: Algebra.dhall  demo.dhall  package.dhall
src/Interpreters/: CustomType.dhall  Member.dhall  Primitive.dhall  Project.dhall  Query.dhall  QueryFragments.dhall  Result.dhall  ResultRows.dhall  Scalar.dhall  Value.dhall  Version.dhall
src/Modules/: Statement.dhall  Statements.dhall  package.dhall
src/Package/: package.dhall
src/Precompilers/: queryFragments.dhall
src/Renderer/: package.dhall
src/Snippets/: package.dhall
src/Templates/: CabalFile.dhall  CabalProjectFile.dhall  CustomCompositeTypeModule.dhall  CustomEnumTypeModule.dhall  DeclaredCompositeTypeModule.dhall  DimensionalityDecoderExp.dhall  DimensionalityEncoderExp.dhall  DimensionalityType.dhall  FieldDeclaration.dhall  FieldDecoder.dhall  FieldEncoder.dhall  Haddock.dhall  ModulePath.dhall  ParamsTypeDecl.dhall  PreludeModule.dhall  RecordDeclaration.dhall  ReexportModule.dhall  RootModule.dhall  StringLiteral.dhall  package.dhall
(+18 files in other folders)
