cabal-version: 3.4
name: demo-music-catalogue
version: 0

library
  hs-source-dirs: src

  default-language: Haskell2010

  default-extensions:
    ApplicativeDo, Arrows, BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveAnyClass, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingStrategies, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImportQualifiedPost, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoFieldSelectors, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedRecordDot, OverloadedStrings, ParallelListComp, PatternGuards, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns

  exposed-modules:
    -- Demo.MusicCatalogue
    -- Demo.MusicCatalogue.DeclaredTypes
    -- Demo.MusicCatalogue.Statements
    
  other-modules:
    -- Demo.MusicCatalogue.DeclaredTypes.AlbumType
    -- Demo.MusicCatalogue.DeclaredTypes.TrackMetadata
    -- Demo.MusicCatalogue.Statements.GetAlbumsByArtist
    -- Demo.MusicCatalogue.Statements.SearchTracksByTitle
    -- Demo.MusicCatalogue.Statements.GetTrackDetails
    -- Demo.MusicCatalogue.Statements.GetArtistsWithTrackCount
    -- Demo.MusicCatalogue.Statements.CreatePlaylist
    -- Demo.MusicCatalogue.Statements.GetTopTracksByPlayCount

  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    hasql,
    hasql-mapping,
    scientific,
    text,
    tagged,
    time,
    uuid,
    vector,

